Subtheme von Seven für Admin

--- a/.htaccess
+++ b/.htaccess
@@ -185,8 +185,8 @@ AddEncoding gzip svgz
   # Disable content sniffing, since it's an attack vector.
   Header always set X-Content-Type-Options nosniff
 </IfModule>
-AuthUserFile /www/htdocs/w011d8a0/hsk/.htpasswd
-AuthGroupFile /dev/null
-AuthName 'Login mit schachklub-schachklub'
-AuthType Basic
-require valid-user
+#AuthUserFile /www/htdocs/w011d8a0/hsk/.htpasswd
+#AuthGroupFile /dev/null
+#AuthName 'Login mit schachklub-schachklub'
+#AuthType Basic
+#require valid-user#
