CSS-Datei korrekt in libraries einbinden

--- a/themes/hsk_zymphonies/hsk_zymphonies.libraries.yml
+++ b/themes/hsk_zymphonies/hsk_zymphonies.libraries.yml
@@ -2,4 +2,4 @@ base-styling:
   version: VERSION
   css:
     component:
-      - css/hsk-zymphonies-styles.css: {}
+      css/hsk-zymphonies-styles.css: {}
