--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.header_slideshow.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.header_slideshow.default.yml
@@ -3,31 +3,25 @@ langcode: de
 status: true
 dependencies:
   config:
-    - field.field.node.header_slideshow.body
     - field.field.node.header_slideshow.field_sl_image
     - node.type.header_slideshow
   module:
     - field_collection
-    - text
     - user
 id: node.header_slideshow.default
 targetEntityType: node
 bundle: header_slideshow
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
-    third_party_settings: {  }
   field_sl_image:
     weight: 102
     label: above
     settings: {  }
     third_party_settings: {  }
-    type: field_collection_list
+    type: field_collection_items
   links:
     weight: 100
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   langcode: true
