Stage file Proxy, Slick Slider in Theme, Header Slideshow auf Startseite

--- a/themes/hsk_zymphonies/hsk_zymphonies.libraries.yml
+++ b/themes/hsk_zymphonies/hsk_zymphonies.libraries.yml
@@ -3,3 +3,17 @@ base-styling:
   css:
     theme:
       css/hsk-zymphonies-styles.css: {}
+
+header-slideshow:
+  version: VERSION
+  css:
+    theme:
+      js/slick/slick.css: {}
+      js/slick/slick-theme.css: {}
+  js:
+    js/slick/slick.min.js: {}
+    js/header-slideshow.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
