--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.hsk_zymphonies_search.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.hsk_zymphonies_search.yml
@@ -1,6 +1,6 @@
 uuid: 5efb2ea2-eb74-48c8-b822-935375771f39
 langcode: de
-status: true
+status: false
 dependencies:
   module:
     - search
@@ -10,7 +10,7 @@ _core:
   default_config_hash: '-Rl4UzLWcNbP0PEI2Ci5O4IuEYk3yK6Xl9DdJaTLO0M'
 id: hsk_zymphonies_search
 theme: hsk_zymphonies
-region: search
+region: '-1'
 weight: -1
 provider: null
 plugin: search_form_block
