Node/9 als Startseite festgelegt und Block für Termine auf Startseite nicht zweimal anzeigen.

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.views_block__events_list_block_1_2.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/block.block.views_block__events_list_block_1_2.yml
@@ -6,6 +6,7 @@ dependencies:
     - views.view.events_list
   module:
     - node
+    - system
     - views
   theme:
     - hsk_zymphonies
@@ -32,3 +33,8 @@ visibility:
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+  request_path:
+    id: request_path
+    pages: '<front>'
+    negate: true
+    context_mapping: {  }
