Neuer News-View, Article zu News umbenannt

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.site.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 0945c977-8695-47e3-938f-007cb167560b
-name: 'HSK Lister Turm'
+name: Drupal
 mail: info@rufzeichen-online.de
 slogan: ''
 page:
