--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.site.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 0945c977-8695-47e3-938f-007cb167560b
-name: Drupal
+name: 'HSK Lister Turm'
 mail: info@rufzeichen-online.de
-slogan: ''
+slogan: 'Dein freundlicher Schachclub'
 page:
   403: ''
   404: ''
