--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -40,6 +40,7 @@ module:
   quickedit: 0
   rdf: 0
   search: 0
+  shield: 0
   shortcut: 0
   system: 0
   taxonomy: 0
@@ -57,7 +58,6 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
-  hsk: 0
   businessgroup_zymphonies_theme: 0
   hsk_zymphonies: 0
 _core:
