--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.header_slideshow.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.header_slideshow.yml
@@ -229,10 +229,10 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
-            make_link: true
-            path: '{{ field_sl_text_link }}'
+            alter_text: true
+            text: "  <div class=\"row\">\n    <div class=\"col-md-12\">\n    <a href=\"{{ field_sl_text_link }}\">\n      {{ field_sl_text }}\n    </a>\n </div>\n  </div>\n"
+            make_link: false
+            path: ''
             absolute: false
             external: false
             replace_spaces: false
@@ -251,12 +251,12 @@ display:
             more_link: false
             more_link_text: ''
             more_link_path: ''
-            strip_tags: false
+            strip_tags: true
             trim: false
-            preserve_tags: ''
+            preserve_tags: '<div><a>'
             html: false
           element_type: ''
-          element_class: ''
+          element_class: container
           element_label_type: ''
           element_label_class: ''
           element_label_colon: false
