--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.events_list.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.events_list.yml
@@ -137,7 +137,7 @@ display:
           type: datetime_default
           settings:
             timezone_override: ''
-            format_type: date_no_time
+            format_type: date_no_year
           group_column: value
           group_columns: {  }
           group_rows: true
