neuere Version von Field Collection, View header Slideshow danach angepasst

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.header_slideshow.field_sl_image.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/field.field.node.header_slideshow.field_sl_image.yml
@@ -17,5 +17,13 @@ required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings: {  }
+settings:
+  handler: 'default:field_collection_item'
+  handler_settings:
+    target_bundles:
+      field_sl_image: field_sl_image
+    sort:
+      field: _none
+    auto_create: false
+    auto_create_bundle: ''
 field_type: field_collection
