Neue Felder für Inhaltstyp Mannschaft

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.team.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.team.default.yml
@@ -3,30 +3,37 @@ langcode: de
 status: true
 dependencies:
   config:
-    - field.field.node.team.body
+    - field.field.node.team.field_league
+    - field.field.node.team.field_results_standings
     - field.field.node.team.field_team_leader
     - node.type.team
   module:
+    - link
     - path
-    - text
 id: node.team.default
 targetEntityType: node
 bundle: team
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 31
-    settings:
-      rows: 9
-      summary_rows: 3
-      placeholder: ''
-    third_party_settings: {  }
   created:
     type: datetime_timestamp
     weight: 10
     settings: {  }
     third_party_settings: {  }
+  field_league:
+    weight: 33
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_results_standings:
+    weight: 34
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
   field_team_leader:
     weight: 32
     settings:
