--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.default.yml
@@ -3,23 +3,36 @@ langcode: de
 status: true
 dependencies:
   config:
-    - field.field.node.team.body
+    - field.field.node.team.field_league
+    - field.field.node.team.field_results_standings
     - field.field.node.team.field_team_leader
     - node.type.team
   module:
-    - text
+    - link
     - user
 id: node.team.default
 targetEntityType: node
 bundle: team
 mode: default
 content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 101
-    settings: {  }
+  field_league:
+    weight: 103
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
+    type: string
+  field_results_standings:
+    weight: 104
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
   field_team_leader:
     weight: 102
     label: above
