--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.teaser.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.team.teaser.yml
@@ -4,24 +4,21 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - field.field.node.team.body
+    - field.field.node.team.field_league
+    - field.field.node.team.field_results_standings
+    - field.field.node.team.field_team_leader
     - node.type.team
   module:
-    - text
     - user
 id: node.team.teaser
 targetEntityType: node
 bundle: team
 mode: teaser
 content:
-  body:
-    label: hidden
-    type: text_summary_or_trimmed
-    weight: 101
-    settings:
-      trim_length: 600
-    third_party_settings: {  }
   links:
     weight: 100
 hidden:
+  field_league: true
+  field_results_standings: true
+  field_team_leader: true
   langcode: true
