Fieldgroup für Tabellen Turniere

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.turnier.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.turnier.default.yml
@@ -31,7 +31,7 @@ third_party_settings:
         effect: none
         speed: fast
         id: info-tabs
-        classes: info-tabs
+        classes: ''
       label: Tabellen
 id: node.turnier.default
 targetEntityType: node
