--- a/themes/businessgroup_zymphonies_theme/businessgroup_zymphonies_theme.libraries.yml
+++ b/themes/businessgroup_zymphonies_theme/businessgroup_zymphonies_theme.libraries.yml
@@ -4,7 +4,7 @@ bootstrap:
     theme:
       includes/bootstrap/css/bootstrap.min.css: {}
   js:
-    includes/bootstrap/js/bootstrap.min.js: {}
+    #includes/bootstrap/js/bootstrap.min.js: {}
   dependencies:
     - core/jquery
     - core/drupal.ajax
@@ -22,8 +22,8 @@ global-components:
       css/custom-style.css: {}
       css/custom-media.css: {}
   js:  
-    js/jquery.smartmenus.min.js: {}
-    js/custom.js: {}
+    #js/jquery.smartmenus.min.js: {}
+    #js/custom.js: {}
   dependencies:
     - core/jquery
     - core/drupal.ajax
