--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.turnier.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.turnier.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.turnier.field_current_results
     - field.field.node.turnier.field_pairings
     - field.field.node.turnier.field_standings
+    - field.field.node.turnier.field_vorhol_nachhol
     - node.type.turnier
   module:
     - path
@@ -26,7 +27,7 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
   field_current_results:
@@ -50,34 +51,41 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+  field_vorhol_nachhol:
+    weight: 5
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
   langcode:
     type: language_select
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
   node_class:
     type: string_textfield
-    weight: 11
+    weight: 12
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 11
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -88,7 +96,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
