--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_db.settings.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/backup_db.settings.yml
@@ -4,7 +4,7 @@ date: html_date
 settings:
   include_tables: null
   exclude_tables: null
-  compress: Gzip
+  compress: None
   no_data: false
   add_drop_table: true
   single_transaction: true
