--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -47,6 +47,7 @@ module:
   search: 0
   shield: 0
   shortcut: 0
+  stage_file_proxy: 0
   system: 0
   taxonomy: 0
   text: 0
@@ -56,6 +57,7 @@ module:
   update: 0
   user: 0
   views_ui: 0
+  extlink: 1
   menu_link_content: 1
   pathauto: 1
   views: 10
