--- a/modules/contrib/editor_advanced_link/editor_advanced_link.info.yml
+++ b/modules/contrib/editor_advanced_link/editor_advanced_link.info.yml
@@ -6,8 +6,8 @@ type: module
 dependencies:
   - editor
 
-# Information added by Drupal.org packaging script on 2016-11-18
-version: '8.x-1.3+1-dev'
+# Information added by Drupal.org packaging script on 2016-09-19
+version: '8.x-1.3'
 core: '8.x'
 project: 'editor_advanced_link'
-datestamp: 1479484229
+datestamp: 1474294849
