--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/linkit.linkit_profile.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/linkit.linkit_profile.default.yml
@@ -21,6 +21,7 @@ matchers:
         event: event
         page: page
         team: team
+        turnier: turnier
       group_by_bundle: false
       include_unpublished: false
       substitution_type: canonical
