--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.user.user.referenced_user.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.user.user.referenced_user.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.user.user.field_user_first_name
     - field.field.user.user.field_user_last_name
     - field.field.user.user.user_picture
-    - image.style.thumbnail
+    - image.style.portrait
   module:
     - image
     - user
@@ -36,8 +36,8 @@ content:
     type: image
     weight: 0
     settings:
-      image_style: thumbnail
-      image_link: content
+      image_style: portrait
+      image_link: ''
     third_party_settings: {  }
     label: hidden
 hidden:
