--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.mannschaften.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.mannschaften.yml
@@ -8,7 +8,7 @@ dependencies:
     - field.storage.user.field_user_first_name
     - field.storage.user.field_user_last_name
     - field.storage.user.user_picture
-    - image.style.thumbnail
+    - image.style.portrait
     - node.type.team
     - system.menu.main
   module:
@@ -284,7 +284,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -358,7 +358,7 @@ display:
           click_sort_column: target_id
           type: image
           settings:
-            image_style: thumbnail
+            image_style: portrait
             image_link: ''
           group_column: ''
           group_columns: {  }
